<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"></item>

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="@string/title_menu" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_notifications" />

</menu>
