<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_login"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/viewActiveOrdersBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:minWidth="200dp"
            android:text="@string/viewActiveOrdersBtn"
            android:textAlignment="center" />

        <Button
            android:id="@+id/viewCompletedOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:text="@string/viewCompletedOrders"
            android:textAlignment="center" />

        <Button
            android:id="@+id/addDishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:text="@string/addDishBtn"
            android:textAlignment="center" />

        <Button
            android:id="@+id/removeDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:text="@string/removeDish"
            android:textAlignment="center" />

        <Button
            android:id="@+id/vendorSignOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/vendorSignOutBtn"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>