<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewAllOrders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    android:padding="3dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:layout_constraintCircleRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_border"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderNumberLabel"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/orderNumberLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderNumberField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderUserNameLabel"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/orderUserNameLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderUserNameField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderUserPhoneLabel"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/customerPhoneNumber"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderUserPhoneField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderDateLabel"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/orderDateLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderDateField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/allFoodsLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/custom_border"
            android:orientation="horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1">

            <TextView
                android:id="@+id/orderedFoodLabel"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:text="@string/orderedFoodLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/allFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalBillLabel"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/totalBillLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalBillField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderStatusLabel"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/orderStatusLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/orderStatusRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/orderPlacedRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/orderPlacedRadioBtn"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/orderPreparingRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderPreparingRadioBtn"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/orderCompletedRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderCompletedRadioBtn"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/updateStatusBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateStatusBtn" />

    </LinearLayout>

</androidx.cardview.widget.CardView>