<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addNewDishLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addNewDishLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dishNameLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dishNameLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/dishNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#fff"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/descriptionLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#fff"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dishPriceLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dishPriceLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/dishPriceField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#fff"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dishImageLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dishImageLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/uploadImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/uploadImageBtn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categoryLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/categoryLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

        <Spinner
            android:id="@+id/categorySpinner"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/addNewDishBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/addNewDishBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/newlyAddedDishLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black_overlay"
        android:orientation="vertical">

        <TextView
            android:id="@+id/uploadedImageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/uploadedImageLabel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/newlyAddedDishName"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/newlyAddedDishPrice"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/newlyAddedDishDesc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/uploadedImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/background" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>