<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_login"
    android:isScrollContainer="true"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="211dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chef_image"
        android:contentDescription="TODO" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddressText"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/foodImageView"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@android:color/white"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailAddressText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/email_address_label"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordText"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressText"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@android:color/white"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/button_style"
        android:text="@string/login_title"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/new_here_sign_up_text"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        tools:layout_editor_absoluteY="291dp" />

</androidx.constraintlayout.widget.ConstraintLayout>